--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kuu-tools",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "Kuu front-end tools",
   "main": "lib/index.js",
   "scripts": {
@@ -29,19 +29,23 @@
   },
   "homepage": "https://github.com/kuuland/kuu-tools#readme",
   "dependencies": {
+    "hoist-non-react-statics": "^3.3.0",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.14",
-    "qs": "^6.7.0"
+    "lodash": "^4.17.15",
+    "qs": "^6.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-plugin-import": "^1.12.0",
     "babel-preset-minify": "^0.5.0",
-    "husky": "^3.0.0",
+    "husky": "^3.0.1",
     "rimraf": "^2.6.3",
-    "standard": "^13.0.2"
+    "standard": "^13.1.0"
   },
   "husky": {
     "hooks": {
@@ -51,7 +55,8 @@
   },
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ],
     "plugins": [
       [
@@ -67,7 +72,8 @@
       "production": {
         "presets": [
           "minify",
-          "@babel/preset-env"
+          "@babel/preset-env",
+          "@babel/preset-react"
         ]
       }
     }
