feat: 支持bearer token格式

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run lint"
+      "pre-commit": "standard --verbose",
+      "pre-push": "standard --verbose"
     }
   },
   "babel": {
